Closed
Bug 228922
Opened 22 years ago
Closed 22 years ago
Official 1.6b overlooks math fonts properties files
Categories
(Core :: MathML, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.6final
People
(Reporter: rbs, Assigned: benjamin)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
959 bytes,
patch
|
rbs
:
review+
rbs
:
superreview+
asa
:
approval1.6+
|
Details | Diff | Splinter Review |
I just downloaded and installled the official 1.6b (Full installer). To my
surprise, mathml is not rendered well. Specifically, stretchy math characters,
such as large parenthesis/brackets/etc, don't stretch. The paradox is that I
have my debug build (trunk), and they render just fine. And that's why I didn't
see the problem earlier -- and could have missed it altogether. This suggests
that the official 1.6b GRE is not getting hold of the math fonts properties
files. Perhaps, something fishy is happening with the GRE's path in the
installer. For me, this is a blocker as it brings the mathml work to naught.
Also, my initial suspicion is that the fix might not be that hard, and could be
an oversight in the GRE's path that was changed recently? Cc:ing
bsmedberg@covad.net.
Steps to Reproduce:
1. install Mozilla 1.6b or later (Full installer)
2. visit the MathML torture test at:
http://www.mozilla.org/projects/mathml/demo/texvsmml.xhtml
Actual Results:
stretchy characters (radicals, large parenthesis, etc) don't stretch
Expected Results:
open the same page with Nav7.1 or a debug build from the trunk, and se how
stretchy characters stretch as expected, and look meaningful.
----------------
Additional info:
it is pretty hard to figure out what is happening with optimized builds, but
with the debug builds, the mathml code outputs the following to say that it
finds the propeties files:
Loading resource://gre/res/fonts/mathfontCMSY10.properties ... Done
Loading resource://gre/res/fonts/mathfontCMEX10.properties ... Done
Loading resource://gre/res/fonts/mathfontMath1.properties ... Done
Loading resource://gre/res/fonts/mathfontMath2.properties ... Done
Loading resource://gre/res/fonts/mathfontMath4.properties ... Done
Loading resource://gre/res/fonts/mathfontMTExtra.properties ... Done
Loading resource://gre/res/fonts/mathfontSymbol.properties ... Done
In case of failure, it will say 'Failed' instead of 'Done'. In case of success,
the rendering code kicks in, and there is no reason why the trunk should then
differ from the installer. In case of failure, stretching doesn't happen, and
that's why I suspect that the cause might be here.
something fishy with the installer, crictical, but might not be that hard to fix.
Flags: blocking1.6?
| Assignee | ||
Comment 2•22 years ago
|
||
Mine... more fallout from bug 179834.
http://lxr.mozilla.org/mozilla/source/layout/mathml/content/src/nsMathMLOperators.cpp#283
should say resource://gre/res/fonts/mathfont.properties
| Assignee | ||
Comment 3•22 years ago
|
||
| Assignee | ||
Comment 4•22 years ago
|
||
Comment on attachment 137689 [details] [diff] [review]
fix mathml operator stretchiness in GRE builds
Darin, one-line change needed for 1.6, can I get a quick rs?
rbs, can you apply this and make sure it fixes your problem? I don't have a
good build at the moment, I'm preparing for a major landing and all my trees
are in the gutter. If this works only partially, we should look for another
hardcoded path like this one.
Attachment #137689 -
Flags: superreview?(darin)
Attachment #137689 -
Flags: review?(darin)
Comment on attachment 137689 [details] [diff] [review]
fix mathml operator stretchiness in GRE builds
r+sr=rbs
my debug build is still fine with the patch. I don't have an optimized trunk
build at present, but I suspected that an inadvertent oversight on the GRE path
was the only reason I could think of regarding the discrepeancy between the
debug build and the optimized build.
Attachment #137689 -
Flags: superreview?(darin)
Attachment #137689 -
Flags: superreview+
Attachment #137689 -
Flags: review?(darin)
Attachment #137689 -
Flags: review+
Attachment #137689 -
Flags: approval1.6?
Updated•22 years ago
|
Flags: blocking1.6? → blocking1.6+
Comment 6•22 years ago
|
||
Comment on attachment 137689 [details] [diff] [review]
fix mathml operator stretchiness in GRE builds
a=asa (on behalf of drivers) for checkin to the 1.6 branch.
Attachment #137689 -
Flags: approval1.6? → approval1.6+
| Assignee | ||
Comment 7•22 years ago
|
||
checked in on 1.6 branch and trunk
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.6final
You need to log in
before you can comment on or make changes to this bug.
Description
•