Bug 228922 - in GRE installer builds MathML operators don't stretch properly. (Fallout from bug 179834). r+sr=rbs